Super beta of performance mode. It looks to beat or match google's